--- a/code/8_qm_v_biomass.Rmd
+++ b/code/8_qm_v_biomass.Rmd
@@ -99,6 +99,52 @@ mock1.all <- full_join(mock1.raw,mock1.post)
 result.dat <- left_join(mock1.all,raw.all)
 ```
 
+plot estimates of amplification efficiency (CLR transformed alpha)
+```{r}
+p_space_mock1 <- (exp(mock1$pars$alpha) / rowSums(exp(mock1$pars$alpha))) %>% as.data.frame()
+
+clr_alpha_list_mock1 <- compositions::clr(p_space_mock1)
+
+clr_alpha_mock1 <- clr_alpha_list_mock1 %>% as.data.frame() 
+
+colnames(clr_alpha_mock1) <- mock1$Species
+
+clr_alpha_sum <- clr_alpha_mock1 %>% 
+                    pivot_longer( .,
+                          cols = colnames(clr_alpha_mock1),
+                          names_to="species",values_to="val") %>%
+                    group_by(species) %>%
+                    summarize(Mean = mean(val),
+                        SD=sd(val),
+                        q.025 = quantile(val,probs=0.025),
+                        q.05 = quantile(val,probs=0.05),
+                        q.25 = quantile(val,probs=0.25),
+                        q.75 = quantile(val,probs=0.75),
+                        q.95 = quantile(val,probs=0.95),
+                        q.975 = quantile(val,probs=0.975)) 
+
+# get rid of reference species denotion
+clr_alpha_sum <- clr_alpha_sum %>%
+                      mutate(SP= ifelse(grepl("zRefSpecies_",species),
+                                       substr(species,13,nchar(species)),
+                                       as.character(species)))
+
+p_clr <-  ggplot(clr_alpha_sum) +
+    geom_errorbarh(aes(xmin=q.25,xmax=q.75,y=SP),size=2,height=0) +
+    geom_errorbarh(aes(xmin=q.025,xmax=q.975,y=SP),size=0.8,height=0) +
+    geom_point(aes(x=Mean,y=SP,fill=SP),size=3,shape=21) +
+    geom_vline(xintercept=0,linetype="dashed") +
+    #scale_fill_manual(values=clr_alpha_sum$manual.col %>% as.character()) +
+    scale_x_continuous("Amplification Efficiency (CLR)") +
+    scale_y_discrete(NULL) +
+    theme_bw() +
+    theme(legend.position = "right",
+          axis.text.y = element_text(size=10))
+
+p_clr
+```
+
+
 import sample metadata 
 ```{r}
 metadata <- read.csv("/home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/nearshore_field_metadata.csv") %>%
@@ -126,13 +172,13 @@ result.join <- result.join %>%
 
 save result.join
 ```{r}
-write.csv(result.join, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/field_quant/qm_results_20241125.csv")
+#write.csv(result.join, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/field_quant/qm_results_20241125.csv")
 ```
 
 read in qm results in needed 
 ```{r}
-result.join <- read.csv("/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/field_quant/qm_results_20241125.csv") %>%
-  select(!X)
+#result.join <- read.csv("/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/field_quant/qm_results_20241125.csv") %>%
+#  select(!X)
 ```
 
 
@@ -422,7 +468,7 @@ df_filter %>%
 ```{r}
 df_filter <- df %>%
   filter(method != "raw.mean") %>%
-  filter(bay_id == "SYLB_B")
+  filter(bay_id == "SHIN_A")
   
 # Extract the unique values after filtering
 year <- unique(df_filter$year)
@@ -559,7 +605,7 @@ fig_2021 <- df2 %>%
 
 fig_2021
 
-ggsave(plot = fig_2021, "outputs/samples_w_mocks_updated/figures/barplots_2021.png", dpi = 300, width = 10, height = 6)
+#ggsave(plot = fig_2021, "outputs/samples_w_mocks_updated/figures/barplots_2021.png", dpi = 300, width = 10, height = 6)
 ```
 
 ```{r}
@@ -581,7 +627,7 @@ fig_2022 <- df2 %>%
   )
 fig_2022
 
-ggsave(plot = fig_2022, "outputs/samples_w_mocks_updated/figures/barplots_2022.png", dpi = 300, width = 10, height = 6)
+#ggsave(plot = fig_2022, "outputs/samples_w_mocks_updated/figures/barplots_2022.png", dpi = 300, width = 10, height = 6)
 ```
 
 
@@ -603,8 +649,10 @@ fig <- df3 %>%
   facet_wrap(~SP) +
   xlim(0,1) +
   ylim(0,1)
+
+fig
   
-ggsave(plot = fig, "outputs/samples_w_mocks_updated/figures/biomass_v_qm.png", dpi = 300, width = 10, height = 6)
+#ggsave(plot = fig, "outputs/samples_w_mocks_updated/figures/biomass_v_qm.png", dpi = 300, width = 10, height = 6)
 ```
 
 
